tests/golden/type_errors/named_struct_unknown_field_assignment.cd
struct Person { name: string, age: number }
let p: Person = { name: "Ada", age: 36 };
p.missing = 1;
